--- a/hackathon/WebVaa3D/WebVaa3d/Views/Home/index.cshtml
+++ b/hackathon/WebVaa3D/WebVaa3d/Views/Home/index.cshtml
@@ -2,7 +2,7 @@
 <script src="https://unpkg.com/tiff.js"></script>
 <script src="https://unpkg.com/vue"></script>
 <script src="/statics/UTIF.js"></script>
-<script src="https://unpkg.com/three"></script>
+<script src="~/statics/Three.js"></script>
 <script src="/statics/OrbitControls.js"></script>
 <script src="/statics/FirstPersonControls.js"></script>
 <script src="http://code.jquery.com/jquery-3.0.0.min.js"></script>
@@ -25,14 +25,9 @@
 <script src="~/js/VirtualPyramid5.js"></script>
 <script src="~/js/SingleFile5.js"></script>
 <script src="~/js/imagefunction.js"></script>
-
-<script src="~/js/EffectComposer.js"></script>
-<script src="~/js/RenderPass.js"></script>
-<script src="~/js/ShaderPass.js"></script>
-<script src="~/js/CopyShader.js"></script>
-<script src="~/js/VolumeShader2.js"></script>
 <script src="https://unpkg.com/current-device/umd/current-device.min.js"></script>
 <script src="~/js/css3-mediaqueries.js"></script>
+
 
 <meta name="hotcss" content="design-width=640" />
 
@@ -79,7 +74,25 @@
 
         </ul>
 
-      
+        <nav class="navbar navbar-inverse">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">网站名</a>
+                </div>
+                <div class="collapse navbar-collapse" id="myNavbar">
+                    <ul class="nav navbar-nav">
+                        <li class="active"><a href="#">主页</a></li>
+                        <li><a href="#">页面 2</a></li>
+                        <li><a href="#">页面 3</a></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
         <div id="bigneuron">
             <div id="view">
 
@@ -106,7 +119,7 @@
 
     console.log(hotcss.px2rem(20));//每个单位像素值及设计屏幕尺寸
     console.log(hotcss.rem2px(1));
-   
+
     //一般直接写在一个js文件中
     ; !function () {
         //无需再执行layui.use()方法加载模块，直接使用即可
@@ -129,12 +142,13 @@
     var isTable = device.tablet();
     if (isMobile | isTable) {
         window.open('', '_self');
-         console.log("mobile");
-     }
+        console.log("mobile");
+    }
     else {
         window.open('/Home/pc', '_self');
         //window.location.href = '/Home/About';
-        console.log("pc");}
+        console.log("pc");
+    }
     //显示文件读取进度
     // document.getElementById('vaa3dweb-input-open-local').addEventListener('change', handleFileSelect, false);
     $('.show').on('click', function () {//单击隐藏或显示下拉菜单
