--- a/hackathon/WebVaa3D/WebVaa3d/Views/Home/pc.cshtml
+++ b/hackathon/WebVaa3D/WebVaa3d/Views/Home/pc.cshtml
@@ -24,7 +24,6 @@
 <script src="~/js/WebGL.js"></script>
 <script src="~/js/Lut.js"></script>
 <script src="~/js/progressbar.js"></script>
-<script src="~/js/openlocal.js"></script>
 <script src="~/js/VirtualPyramid5.js"></script>
 <script src="~/js/SingleFile5.js"></script>
 <script src="~/js/imagefunction.js"></script>
@@ -61,7 +60,7 @@
                                 <dd id="openfiles">
                                     <a href="javascript:;"> <i class="fa fa-folder-open fa-fw"></i><small>open...</small> </a>
                                     <dl class="thrid-nave">
-                                        <dd id="open-local"><a href="#"><i class="fa fa-desktop fa-fw"></i>&nbsp;<small>open from local</small><input type="file" class="form-control hidden" id="vaa3dweb-input-open-local" accept="" multiple="multiple" onclick="openlocal()" /></a></dd>
+                                        <dd id="open-local"><a href="#"><i class="fa fa-desktop fa-fw"></i>&nbsp;<small>open from local</small><input type="file" class="form-control hidden" id="vaa3dweb-input-open-local" accept="" multiple="multiple" onclick="readlocalfile()" /></a></dd>
                                         <dd id="open-server" onclick="getPictures()"><a href="#"><i class="fa  fa-server fa-fw"></i>&nbsp;<small>open from server</small></a></dd> <!--待完善-->
                                         <dd id="open-url"><a href="#"><i class="fa fa-globe fa-fw "></i>&nbsp;<small>open by URL</small></a></dd>
                                     </dl>
