--- a/hackathon/WebVaa3D/WebVaa3d/Views/Home/index.cshtml
+++ b/hackathon/WebVaa3D/WebVaa3d/Views/Home/index.cshtml
@@ -140,7 +140,7 @@
         console.log("mobile");
     }
     else {
-        window.open('', '_self');
+        window.open('/Home/pc', '_self');
         //window.location.href = '/Home/About';
         console.log("pc");
     }
